@@ -174,6 +174,23 @@
 {}
 @end
 
+@interface SpriteOffsetAnchorSkew : SpriteDemo
+{}
+@end
+
+@interface SpriteBatchNodeOffsetAnchorSkew : SpriteDemo
+{}
+@end
+
+@interface SpriteOffsetAnchorSkewScale : SpriteDemo
+{}
+@end
+
+@interface SpriteBatchNodeOffsetAnchorSkewScale : SpriteDemo
+{}
+@end
+
+
 @interface SpriteOffsetAnchorFlip : SpriteDemo
 {}
 @end
