@@ -2,6 +2,7 @@ version 1.0 - XX-Jun-2011
 . [NEW] Actions: Added SkewTo and SkewBy actions
 . [NEW] LabelTTF: Added support for LineBreakMode. Mac only supports Word-Break.
 . [NEW] Node / Sprite: Added support for SkewX and SkewY properties
+. [NEW] Tests: Added skewX, skewY tests for sprites and actions. Added linebreak tests for LabelTTF.
 . [NEW] TextureCache: Added dumpCachedTextureInfo method. Shows the RAM used by the cached textures (issue #1154)
 . [FIX] cocosLive: Fixed memory leaks in NSURLConnection
 . [FIX] Sprites: DisplayedFrame returns the correct frame (issue #1182)
